<resources>

    <string name="app_name">SisGV</string>
    <string name="action_settings">Configurações</string>
    <string name="subtitulo">Cadastro de RML e RDS mais rápido e prático</string>
    <string name="title_activity_tela_login">TelaLogin</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_tela_home">Início</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_usuario">tadeu.nunes@bm.pr.gov.br</string>
    <string name="text_dismiss">Descartar</string>
    <string name="rml">RML</string>
    <string name="rsd">RSD</string>
    <string name="title_activity_rmlcadastro">Cadastro RML</string>
    <string name="title_activity_rsdcadastro">Cadastro RSD</string>
    <string name="rascunho">Salvar rascunho</string>
    <string name="concluir">Concluir cadastro</string>
    <string name="rml_cadastro_subarea_prompt">Subárea</string>
    <string name="rml_cadastro_pgv_prompt">PGV</string>
    <string name="rml_cadastro_turno_prompt">Turno</string>
    <string name="rml_cadastro_clima_prompt">Condição climática</string>
    <string name="rml_cadastro_mare_prompt">Maré</string>
    <string name="rml_cadastro_gv1_prompt">Guarda-vidas 1</string>
    <string name="rml_cadastro_gv2_prompt">Guarda-vidas 2</string>
    <string name="rml_cadastro_gv3_prompt">Guarda-vidas 3</string>
    <string name="rml_cadastro_gv4_prompt">Guarda-vidas 4</string>
    <string name="obs">Observações</string>

</resources>
