<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/act_tela_login"
                tools:context="bombeiros.pr.gov.br.sisgv.TelaLogin">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/titulo" />

    <ImageView
        android:src="@drawable/logosisgv12"
        android:visibility="visible"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/logosisgv"/>

    <TextView
        android:text="@string/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logosisgv"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/subtitulo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:hint="Login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_layout"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:hint="Senha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!--
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:id="@+id/login"
        android:layout_below="@+id/subtitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:id="@+id/senha"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp" />
    -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/login"
        android:id="@+id/btlogin"/>

</RelativeLayout>
